[package]
name = "nextest-runner"
description = "Core runner logic for cargo nextest."
version = "0.56.1"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/nextest-runner"
edition = "2021"
rust-version.workspace = true
keywords = ["nextest", "test-runner"]
categories = ["development-tools::testing"]
# For an example build script that gates by compiler version, see the history for build.rs in this
# directory.

[dependencies]
atomicwrites = "0.4.3"
aho-corasick = "1.1.3"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
future-queue = "0.3.0"
bstr.workspace = true
bytes = "1.7.0"
camino = { version = "1.1.7", features = ["serde1"] }
camino-tempfile = "1.1.1"
# config's "preserve_order" feature is needed for preserving the order of
# setup scripts in .config/nextest.toml.
config = { version = "0.14.0", default-features = false, features = [
    "toml",
    "preserve_order",
] }
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
chrono = "0.4.38"
debug-ignore.workspace = true
display-error-chain = "0.2.0"
duct = "0.13.7"
either = "1.13.0"
futures = "0.3.30"
guppy.workspace = true
# Used to find the cargo root directory, which is needed in case the user has
# added a config.toml there
home = "0.5.9"
humantime-serde = "1.1.1"
indicatif = "0.17.8"
is_ci = "1.2.0"
itertools = "0.12.1"
log = "0.4.22"
miette.workspace = true
once_cell = "1.19.0"
owo-colors = "4.0.0"
pin-project-lite = "0.2.14"
rand = "0.8.5"
regex = "1.10.5"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = "1.0.121"
serde_path_to_error = "0.1.16"
shell-words = "1.1.0"
smol_str = { version = "0.2.2", features = ["serde"] }
strip-ansi-escapes = "0.2.0"
tar = "0.4.41"
# For cfg expression evaluation for [target.'cfg()'] expressions
target-spec.workspace = true
target-spec-miette.workspace = true
thiserror = "1.0.63"
# For parsing of .cargo/config.toml files
tokio = { version = "1.38.0", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml = "0.8.19"
toml_edit = { version = "0.22.20", features = ["serde"] }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
zstd = { version = "0.13.2", features = ["zstdmt"] }

###
### Update-related features, optionally enabled
###
http = { version = "0.2.12", optional = true }
mukti-metadata = { version = "0.2.1", optional = true }
# TODO: remove dependency on self_update, build our own thing on top of mukti
self_update = { version = "0.39.0", optional = true, default-features = false, features = [
    "archive-tar",
    "compression-flate2",
] }

nextest-filtering = { version = "0.9.0", path = "../nextest-filtering" }
nextest-metadata = { version = "0.11.0", path = "../nextest-metadata" }
quick-junit.workspace = true
newtype-uuid.workspace = true
console-subscriber = { version = "0.4.0", optional = true }
unicode-ident = "1.0.12"
unicode-normalization = "0.1.23"
indexmap = { version = "2.3.0", features = ["serde"] }
smallvec = "1.13.2"
nextest-workspace-hack.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2.154"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
] }
win32job = "2.0.0"
dunce = "1.0.4"

# Use rustls by default, OpenSSL on platforms where rustls isn't available:
# RISC-V: https://github.com/nextest-rs/nextest/issues/820
# (default features for self_update turns on openssl)
[target.'cfg(not(any(target_arch = "riscv32", target_arch = "riscv64")))'.dependencies]
self_update = { version = "0.39.0", optional = true, default-features = false, features = [
    "rustls",
] }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
self_update = { version = "0.39.0", optional = true }


[dev-dependencies]
color-eyre = { version = "0.6.3", default-features = false }
indoc = "2.0.5"
insta = { version = "1.39.0", default-features = false }
maplit = "1.0.2"
pathdiff = { version = "0.2.1", features = ["camino"] }
pretty_assertions = "1.4.0"
proptest = "1.5.0"
test-strategy = "0.4.0"
test-case = "3.3.1"

[[bin]]
name = "passthrough"
path = "test-helpers/passthrough.rs"

[features]
self-update = ["self_update", "http", "mukti-metadata"]
experimental-tokio-console = ["console-subscriber", "tokio/tracing"]
