[package]
name = "quick-junit"
description = "Data model and serializer for JUnit/XUnit XML"
version = "0.3.3"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/quick-junit"
keywords = ["junit", "xunit", "xml", "serializer", "flaky-tests"]
categories = ["encoding", "development-tools"]
edition = "2021"
rust-version = "1.66"

[dependencies]
chrono = "0.4.31"
indexmap = "2.0.0"
quick-xml = "0.30.0"
thiserror = "1.0.48"
uuid = "1.4.1"
nextest-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
goldenfile = "1.5.2"
owo-colors = "3.5.0"
