[package]
name = "quick-junit"
description = "Data model and serializer for JUnit/XUnit XML"
version = "0.3.5"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/quick-junit"
keywords = ["junit", "xunit", "xml", "serializer", "flaky-tests"]
categories = ["encoding", "development-tools"]
edition = "2021"
rust-version = "1.70"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std"] }
indexmap = "2.1.0"
quick-xml = "0.31.0"
thiserror = "1.0.50"
uuid = "1.5.0"
nextest-workspace-hack = { version = "0.1", path = "../workspace-hack" }
strip-ansi-escapes = "0.2.0"

[dev-dependencies]
goldenfile = "1.6.0"
owo-colors = "3.5.0"
