[package]
name = "testrunner"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
aho-corasick = "0.7.15"
anyhow = "1.0.38"
camino = "1.0.2"
duct = "0.13.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
toml = "0.5.8"

[dev-dependencies]
indoc = "1.0.3"
proptest = "1.0.0"
proptest-derive = "0.3.0"
