[package]
name = "testrunner"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
aho-corasick = "0.7.15"
anyhow = "1.0.38"
camino = { version = "1.0.2", features = ["serde1"] }
duct = "0.13.5"
num_cpus = "1.13.0"
rayon = "1.5.0"
scoped-pool = "1.0.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
structopt = "0.3.21"
toml = "0.5.8"

[dev-dependencies]
indoc = "1.0.3"
maplit = "1.0.2"
pretty_assertions = "0.7.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
