[package]
name = "testrunner"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
aho-corasick = "0.7.15"
anyhow = "1.0.38"
atty = "0.2.14"
camino = { version = "1.0.4", features = ["serde1"] }
crossbeam-channel = "0.5.0"
duct = "0.13.5"
num_cpus = "1.13.0"
rayon = "1.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
signal-hook = "0.3.7"
structopt = "0.3.21"
termcolor = "1.1.2"
toml = "0.5.8"

[dev-dependencies]
cargo_metadata = "0.13.1"
indoc = "1.0.3"
once_cell = "1.7.2"
maplit = "1.0.2"
pretty_assertions = "0.7.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
