[package]
name = "nextest-tests"
version = "0.1.0"
description = "nextest-tests description"
authors = [
    "Diem Association <opensource@diem.com>",
    "Fake Author <fakeauthor@example.com>",
]
homepage = "https://fake-homepage.example.com"
# Specify both a license and a license file for test_cargo_env_vars.
license = "MIT OR Apache-2.0"
license-file = "foo.md"
repository = "https://example.com/fake/repository"
edition = "2018"

[[example]]
name = "nextest-tests"
test = true

[[example]]
name = "other"
test = true

# Make this crate its own workspace.
[workspace]
members = [
    "derive"
]

[dependencies]
