[package]
name = "nextest-tests"
version = "0.1.0"
description = "nextest-tests description"
authors = [
    "Fake Author <fakeauthor@example.com>",
    "Author 2 <author2@example.org>",
]
homepage = "https://fake-homepage.example.com"
# Specify both a license and a license file for test_cargo_env_vars.
license = "MIT OR Apache-2.0"
license-file = "foo.md"
repository = "https://example.com/fake/repository"
edition = "2018"

[[example]]
name = "nextest-tests"
test = true

[[example]]
name = "other"
test = true

# Make this crate its own workspace.
[workspace]
members = [
    "cdylib/cdylib-example",
    "cdylib/cdylib-link",
    "derive",
    "dylib-test",
]

[dependencies]
dylib-test = { path = "dylib-test" }
uuid = "1.1.2"
