[package]
name = "nextest-tests"
version = "0.1.0"
description = "nextest-tests description"
authors = [
    "Fake Author <fakeauthor@example.com>",
    "Author 2 <author2@example.org>",
]
homepage = "https://fake-homepage.example.com"
# Specify both a license and a license file for test_cargo_env_vars.
license = "MIT OR Apache-2.0"
license-file = "foo.md"
repository = "https://example.com/fake/repository"
edition = "2018"
# This was previously "1.56", but that causes a divergence between compile-time and runtime because
# nextest (via cargo_metadata) parses the field as a semver version, not a string (hence resulting
# in 1.56.0). The important thing is not that the version is exactly preserved but that it is
# effectively the same.
rust-version = "1.58.0"

[[example]]
name = "nextest-tests"
test = true

[[example]]
name = "other"
test = true

# Make this crate its own workspace.
[workspace]
members = [
    "cdylib/cdylib-example",
    "cdylib/cdylib-link",
    "derive",
    "dylib-test",
    "with-build-script",
]

[dependencies]
dylib-test = { path = "dylib-test" }
uuid = "1.2.1"

# Test that the "line-tables-only" debug setting works.
[profile.dev]
debug = 1

[profile.dev-line-tables-only]
inherits = "dev"
debug = "line-tables-only"
