[package]
name = "zstd-dict"
description = "Train and analyze zstd dictionaries for nextest record archives"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
color-eyre.workspace = true
eazip.workspace = true
etcetera.workspace = true
nextest-runner.workspace = true
nextest-workspace-hack.workspace = true
walkdir.workspace = true
zstd.workspace = true
