[package]
name = "cargo-nextest"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.0.5"
# we don't use the tracing support
cfg-if = "1.0.0"
color-eyre = { version = "0.5.11", default-features = false }
duct = "0.13.5"
enable-ansi-support = "0.1.1"
# we don't use the default formatter so we don't need default features
env_logger = { version = "0.9.0", default-features = false }
guppy = "0.12.5"
log = "0.4.14"
nextest-config = { path = "../config" }
nextest-runner = { path = "../runner" }
owo-colors = { version = "3.1.1", features = ["supports-colors"] }
structopt = "0.3.25"
shellwords = "1.1.0"
supports-color = "1.3.0"
