[package]
name = "nextest-config"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
camino = { version = "1.0.5", features = ["serde1"] }
config = { version = "0.11.0", default-features = false, features = ["toml"] }
serde = { version = "1.0.130", features = ["derive"] }
humantime-serde = "1.0.1"
toml = "0.5.8"
