[package]
name = "nextest-runner"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
aho-corasick = "0.7.18"
camino = { version = "1.0.5", features = ["serde1"] }
cargo_metadata = "0.14.1"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
ctrlc = { version = "3.2.1", features = ["termination"] }
debug-ignore = "1.0.1"
duct = "0.13.5"
guppy = "0.12.6"
once_cell = "1.8.0"
owo-colors = "3.1.1"
num_cpus = "1.13.0"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
strip-ansi-escapes = "0.1.1"
structopt = "0.3.25"
twox-hash = { version = "1.6.1", default-features = false }

nextest-config = { path = "../config" }
nextest-summaries = { path = "../summaries" }
quick-junit = { path = "../../quick-junit" }

[dev-dependencies]
color-eyre = { version = "0.5.11", default-features = false }
indoc = "1.0.3"
maplit = "1.0.2"
pretty_assertions = "1.0.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
