[package]
name = "nextest-runner"
description = "Core runner logic for cargo nextest."
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/diem/diem-devtools"
documentation = "https://docs.rs/nextest-runner"
edition = "2021"

[dependencies]
aho-corasick = "0.7.18"
camino = { version = "1.0.7", features = ["serde1"] }
config = { version = "0.11.0", default-features = false, features = ["toml"] }
cargo_metadata = "0.14.1"
chrono = "0.4.19"
crossbeam-channel = "0.5.2"
ctrlc = { version = "3.2.1", features = ["termination"] }
debug-ignore = "1.0.1"
duct = "0.13.5"
guppy = "0.12.6"
humantime-serde = "1.0.1"
indent_write = "2.2.0"
once_cell = "1.9.0"
owo-colors = "3.2.0"
num_cpus = "1.13.1"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
strip-ansi-escapes = "0.1.1"
twox-hash = { version = "1.6.2", default-features = false }

nextest-metadata = { path = "../metadata" }
quick-junit = { path = "../../quick-junit" }

[dev-dependencies]
color-eyre = { version = "0.6.0", default-features = false }
indoc = "1.0.3"
maplit = "1.0.2"
pretty_assertions = "1.0.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
